--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -3,11 +3,12 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <title>E</title>
     </head>
 <body>
-    <script>//var a = prompt("请输入你的姓名:");</script>
-   <script>//document.write('你好' + a)</script> 
+    <script>var a = prompt("请输入你的姓名:");</script>
+   <h1>hi,</h1>
+    <script>document.write(a)</script> 
     
    <style>
        .div1 {
@@ -17,6 +18,10 @@
        }
    </style >
    <h1 class="div1">额</h1>
+       <script>
+       alert('你好，'a)
+       
+       </script>
 </body >
 
 </html >
