--- a/index.html
+++ b/index.html
@@ -1,22 +1,13 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html>
-<head>
-    <meta charset="utf-8" />
-    <title></title>
+    <head>
+        <title>github</title>
     </head>
-<body>
-    <script>//var a = prompt("请输入你的姓名:");</script>
-   <script>//document.write('你好' + a)</script> 
-    
-   <style>
-       .div1 {
-           width: 300px;
-           height: 100px;
-           border: 1px solid blue;
-       }
-   </style >
-   <h1 class="div1">额</h1>
-</body >
-
+    <body>
+        <script>var a = prompt("请输入你的姓名:");</script>
+        <script>document.write("hi,"+a)</script>
+        <p id="b"></p> 
+        <script>document.getElementById("b").innerHTML ="hi,"+a</script>
+    </body >
 </html >
